--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,25 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{  
+    padding: 0;
+    margin: 0;
     -webkit-box-sizing: border-box; 
     -moz-box-sizing: border-box;    
-    box-sizing: border-box;  
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;  
   }
   
-  body {
-    margin: 0;
+  html, body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
   
 .App{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 5vh;
-    backdrop-filter: 5px;
-    background-color: #101010;
+    min-width: 100vw;
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
+    background-color: #202020; 
 }
 
 
