--- a/src/containers/ObjectDetection.scss
+++ b/src/containers/ObjectDetection.scss
@@ -8,4 +8,10 @@
         font-size: calc(10px + 2vmin);
         color: white;
       }
+      h3{
+        color:white;
+        display: block;
+        width: 150px;
+        margin: 0 auto;
+      }
 }
