--- a/src/containers/ObjectDetection.scss
+++ b/src/containers/ObjectDetection.scss
@@ -14,4 +14,23 @@
         width: 150px;
         margin: 0 auto;
       }
+      button{
+        position: absolute;
+        bottom: 0;
+        // center it
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+      }
+      .detected{
+        position: absolute;
+        bottom: 200px;
+        color: white;
+        h4{
+          font-size: 20px;
+        }
+        // center it
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 }
